Fixed broken mobile and algolia navbar overflow

--- a/src/css/components/_algolia-searchbar.scss
+++ b/src/css/components/_algolia-searchbar.scss
@@ -13,12 +13,9 @@ html[data-theme='dark'] {
 
 //overrides
 .algolia-search {
-    width: 100%;
-    min-width: 30vw;
+    width: 65%;
 
     @media (max-width: 996px) {
-        width: 200px;
-        min-width: 40%;
         position: unset !important;
     }
 
